# mcp_proxy_pydantic_agent

./: README.md  openapi_proxy.py  pydantic_planner.py  pyproject.toml
jokes/: joke_server.py
mcp-client/: client.py  client2.py  config.json  working_client.py
